[tool.poetry]
name = "soulcatcher-voice-changer"
version = "0.1.0"
description = "Telegram bot for voice messages anonimisation."
authors = ["Andrey Goryachev <raikslerx@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.22.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
